@@ -1,3 +1,11 @@
+2006-02-17 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/vrml97node.cpp
+	(text_node::update_face()): Moved FontconfigError and
+	FreeTypeError exception classes out of the function so that they
+	can be template parameters; that is, so they can be used with
+	boost::ignore_unused_variable_warning.
+
 2006-02-16 Braden McDaniel  <braden@endoframe.com>
 
 	* configure.ac: Require automake 1.9 (for tar-pax option).
